--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
-<html>
-</html>
-<html>
-<head>
-</head>
-<body>
-</body>
-</html>
-<head>
-<meta charset=”UTF-8”>
-</head>
-<title>Produtos - Barbearia Alura</title>
-<link rel=”stylesheet” href=”Produtos.css”>
-<body>
-<header>
-</header>
-</body>
-<header>
-</header>
-<image src =”logo.png”></image>
+header {
+}
+header {
+background: #BBBBBB;
+}
+<nav>
 <ul>
-<li></li>
-<li></li>
-<li></li>
+<li><a href=”index.html”>Home</a></li>
+<li><a href=”Produtos.html”>Produtos</a></li>
+<li><a href=”contato.html”>Contato</a></li>
 </ul>
-<ul>
-<li>Home</li>
-<li>Produtos</li>
-<li>Contato</li>
-</ul>
+</nav>
+nav li {
+display: inline;
+}
+nav a {
+text-transform: uppercase;
+}
+nav a {
+text-transform: uppercase;
+color: #000000;
+}
+nav a {
+text-transform: uppercase;
+color: #000000;
+font-weight: bold;
+}
+nav a {
+text-transform: uppercase;
+color: #000000;
+font-weight: bold;
+font-size: 22px;
+}
+nav a {
+text-transform: uppercase;
+color: #000000;
+font-weight: bold;
+font-size: 22px;
+text-decoration: none;
+}
+nav li {
+display: inline;
+margin:
+}
+nav li {
+display: inline;
+margin: 0 0 0 15px;
+}
