--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
+			<h1 class="titulo-principal">Barbearia sorriso </h1>
 		</header>
 		<img id="banner" src="barba.jpg">
 		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+			<h2 class="titulo-centralizado">Sobre a Barbearia do sorriso </h2>
 	 
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2020, barbearia do sorriso Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
