--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="titulo-principal">Barbearia sorriso </h1>
 		</header>
-		<img id="banner" src="beneficios.jpg">
+		<img id="banner" src="barba 2.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia do sorriso </h2>
 	 
