--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<h1 class="titulo-principal">Barbearia sorriso </h1>
 		</header>
 		<img id="banner" src="barba 2.jpg">
+		<img id="banner" src="barba.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia do sorriso </h2>
 	 
