--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		</header>
 		<img id="banner" src="barba.jpg">
 		<img id="banner" src="barba 2.jpg">
+		<img id="banner" src="funcionario.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia do sorriso </h2>
 	 
