--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<img id="banner" src="barba.jpg">
 		<img id="banner" src="barba 2.jpg">
 		<img id="banner" src="funcionario.jpg">
+		<img id="banner" src="banner.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia do sorriso </h2>
 	 
