--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia do sorriso </h2>
 	 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2020, barbearia do sorriso Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+			<p>Localizada no coração da cidade a <strong>Barbearia sorriso</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2020, barbearia do sorriso Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
@@ -29,10 +29,10 @@
 			<h3 class="titulo-centralizado">Benefícios</h3>
 
 			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
+				<li class="itens">Atendimento aos Clientes entrada so no caixa</li>
+				<li class="itens">Espaço diferenciado todos sao bem vindos</li>
+				<li class="itens">Localização centro</li>
+				<li class="itens">Profissionais Qualificados sorriso</li>
 				<li class="itens">Profissional: Luiz Andrade</li>
 			</ul>
 
