--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			<h3 class="titulo-centralizado">Benefícios</h3>
 
 			<ul>
-				<li class="itens">Atendimento aos Clientes entrada so no caixa</li>
-				<li class="itens">Espaço diferenciado todos sao bem vindos</li>
-				<li class="itens">Localização centro</li>
-				<li class="itens">Profissionais Qualificados sorriso</li>
+				<li class="itens">Atendimento aos Clientes: atendimento so no caixa</li>
+				<li class="itens">Espaço diferenciado: todos sao bem vindos</li>
+				<li class="itens">Localização: centro</li>
+				<li class="itens">Profissionais Qualificados</li>
 				<li class="itens">Profissional: Luiz Andrade</li>
 			</ul>
 
